[gd_scene load_steps=3 format=3 uid="uid://o0tfs0qf2cyx"]

[ext_resource type="Script" uid="uid://prkrvbmm1s2l" path="res://src/entity/entity.gd" id="1_gbh6w"]
[ext_resource type="Texture2D" uid="uid://b352dl6f3c7wf" path="res://assets/wall-v2.png" id="2_jrrsu"]

[node name="Entity" type="Area2D"]
script = ExtResource("1_gbh6w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_jrrsu")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
